Add JavaFX To The Image